--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,7 @@
 h1 {
     text-align: center;
-    color: white;
+    color: #fff;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    font-size: 3rem;
+    margin: 40px 0 20px 0;
 }
