--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 body {
   background: #1b75c8;
   font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
 }
