--- a/src/components/AddForm/AddForm.css
+++ b/src/components/AddForm/AddForm.css
@@ -53,3 +53,13 @@ body {
 .button:hover {
     background: #a5d2ff
 }
+
+.books_container {
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    box-shadow: 0 0 10px #00000080;
+    
+}
